--- a/check.html
+++ b/check.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Montagem de PC</title>
-    <link rel="stylesheet" href="check.css"> <!-- Conectando o novo CSS -->
+    <link rel="stylesheet" href="check.css"> <!-- Conectando o CSS -->
 </head>
 <body>
 
@@ -18,54 +19,85 @@
             <ul class="checklist">
                 <li>
                     <input type="checkbox" id="item1">
-                    <span>Escolher a placa-mãe</span>
+                    <span>Preparar a placa-mãe</span>
+                    <p>Escolha uma placa-mãe compatível com seu processador e gabinete.</p>
+                    <img src="https://www.wikihow.com/images/thumb/d/d4/Build-a-Personal-Desktop-Computer-Step-1.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-1.jpg" alt="Preparar a placa-mãe" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item2">
-                    <span>Instalar o processador (CPU)</span>
+                    <span>Instalar a CPU no soquete da placa-mãe</span>
+                    <p>Posicione cuidadosamente a CPU no soquete correspondente da placa-mãe, alinhando os pinos corretamente.</p>
+                    <img src="https://www.wikihow.com/images/thumb/1/1a/Build-a-Personal-Desktop-Computer-Step-2.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-2.jpg" alt="Instalar a CPU" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item3">
-                    <span>Adicionar memória RAM</span>
+                    <span>Conectar o cooler da CPU à placa-mãe</span>
+                    <p>Fixe o cooler sobre a CPU para garantir o resfriamento adequado.</p>
+                    <img src="https://www.wikihow.com/images/thumb/b/b5/Build-a-Personal-Desktop-Computer-Step-3.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-3.jpg" alt="Conectar o cooler da CPU" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item4">
-                    <span>Inserir a placa de vídeo (GPU)</span>
+                    <span>Anexar os módulos de memória RAM</span>
+                    <p>Insira os módulos de RAM nos slots designados na placa-mãe.</p>
+                    <img src="https://www.wikihow.com/images/thumb/7/78/Build-a-Personal-Desktop-Computer-Step-4.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-4.jpg" alt="Anexar a memória RAM" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item5">
-                    <span>Conectar a fonte de alimentação</span>
+                    <span>Montar a fonte de energia no gabinete</span>
+                    <p>Instale a fonte de alimentação no compartimento adequado do gabinete.</p>
+                    <img src="https://www.wikihow.com/images/thumb/6/66/Build-a-Personal-Desktop-Computer-Step-5.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-5.jpg" alt="Montar a fonte de energia" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item6">
-                    <span>Instalar o sistema de refrigeração</span>
+                    <span>Anexe a lâmina traseira da placa mãe ao gabinete e confira as posições de montagem</span>
+                    <p>As instruções da placa mãe devem definir sua posição.</p>
+                    <img src="https://www.wikihow.com/images/thumb/6/69/Build-a-Personal-Desktop-Computer-Step-6.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-6.jpg" alt="Instalar dispositivos de armazenamento" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item7">
-                    <span>Verificar as conexões do painel frontal</span>
+                    <span>Posicione a placa mãe.</span>
+                    <p>Posicione adequadamente a placa mãe no gabinete.</p>
+                    <img src="https://www.wikihow.com/images/thumb/9/99/Build-a-Personal-Desktop-Computer-Step-7.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-7.jpg" alt="Instalar a GPU" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item8">
-                    <span>Testar o PC antes de fechar a caixa</span>
+                    <span>Monte o disco rígido e conecte-o à fonte de energia e à placa mãe.</span>
+                    <p>Deve haver conexões separadas para a fonte e a placa mãe. No caso de discos rígidos SATA, é preciso remover o jumper.</p>
+                    <img src="https://www.wikihow.com/images/thumb/0/01/Build-a-Personal-Desktop-Computer-Step-8.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-8.jpg" alt="Conectar cabos da fonte" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item9">
-                    <span>Fechar a caixa e ligar o PC</span>
+                    <span>Ligue as conexões SATA aos drives e aos conectores USB e os interruptores do gabinete à placa mãe</span>
+                    <p>As instruções do gabinete e da placa mãe deverão indicar onde conectar os cabos.</p>
+                    <img src="https://www.wikihow.com/images/thumb/7/7e/Build-a-Personal-Desktop-Computer-Step-9.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-9.jpg" alt="Conectar cabos do painel frontal" width="200">
                 </li>
                 <li>
                     <input type="checkbox" id="item10">
-                    <span>Instalar o sistema operacional</span>
+                    <span>Conecte o conector ATX de 20 ou 24 pinos e o conector de controle da fonte de energia à placa mãe.</span>
+                    <p>Conecte o conector ATX de 20 ou 24 pinos e o conector de controle da fonte de energia à placa mãe.</p>
+                    <img src="https://www.wikihow.com/images/thumb/b/b7/Build-a-Personal-Desktop-Computer-Step-10.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-10.jpg" alt="Testar o PC" width="200">
+                </li>
+                <li>
+                    <input type="checkbox" id="item11">
+                    <span>Monte o drive de DVD-ROM</span>
+                    <p>Após conectar o cabo ATA ao dispositivo, encaixe-o na fonte de energia.</p>
+                    <img src="https://www.wikihow.com/images/thumb/b/ba/Build-a-Personal-Desktop-Computer-Step-11.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-11.jpg" alt="Fechar o gabinete" width="200">
+                </li>
+                <li>
+                    <input type="checkbox" id="item12">
+                    <span>Selecione um sistema operacional.</span>
+                    <p>Finalmente, selecione um sistema operacional compatível e siga as instruções de instalação.</p>
+                    <img src="https://www.wikihow.com/images/thumb/8/8a/Build-a-Personal-Desktop-Computer-Step-12.jpg/v4-728px-Build-a-Personal-Desktop-Computer-Step-12.jpg" alt="Instalar sistema operacional" width="200">
                 </li>
             </ul>
         </div>
     </main>
 
     <!-- Botão voltar -->
+    <button class="voltar" onclick="window.location.href='tela2.html'">Voltar</button>
+
     <footer>
         <p>&copy; 2024 PC Builder. Todos os direitos reservados.</p>
     </footer>
-    <button class="voltar" onclick="window.location.href='tela2.html'">Voltar</button>
-
-   
 </body>
 </html>
