--- a/tela.html
+++ b/tela.html
@@ -13,11 +13,16 @@
     </header>
     
     <main>
-        <button class="main-btn" onclick="window.location.href='tela2.html'">Começar</button>
-        <footer>
-            <p>&copy; 2024 PC Builder. Todos os direitos reservados.</p>
-        </footer>
+        <!-- Botões principais -->
+        <div class="button-container">
+            <button class="main-btn" onclick="window.location.href='cadastro.html'">Cadastrar</button>
+            <button class="main-btn" onclick="window.location.href='login.html'">Login</button>
+            <button class="main-btn" onclick="window.location.href='tela2.html'">Começar como Visitante</button>
+        </div>
     </main>
-    
+
+    <footer>
+        <p>&copy; 2024 PC Builder. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
